apps/monitoring/speedtest-tracker/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: monitoring
  labels:
    app: mariadb
    tier: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        tier: monitoring
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: speedtest-db-data
      containers:
        - name: mariadb
          image: mariadb:11
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
              readOnly: false
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
