apps/monitoring/speedtest-tracker/speedtest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: monitoring
  labels:
    app: speedtest-tracker
    tier: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: speedtest-tracker
        tier: monitoring
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: speedtest-tracker-data
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:1.14.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
              readOnly: false
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 10
