apps/monitoring/speedtest-tracker/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: monitoring
  labels:
    app: mariadb
    tier: monitoring
spec:
  type: ClusterIP
  selector:
    app: mariadb
    tier: monitoring
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
      protocol: TCP
