apps/monitoring/speedtest-tracker/speedtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: speedtest-tracker
    tier: monitoring
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
