apps/monitoring/speedtest-tracker/speedtest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: monitoring
  labels:
    app: speedtest-tracker
    tier: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName:
  rules:
    - host: speedtest.lan.shiba-toast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  number: 80
  tls:
    - hosts:
        - speedtest.lan.shiba-toast.com
      secretName: speedtest-tracker-tls
